# AIOS_habbit

./: .gitignore  AGENT_RULES.md  ARCHITECTURE.md  CASE_COCKPIT_ACCEPTANCE_CRITERIA.md  CHANGELOG.md  CONSTITUTION.md  DEPRECATION_PAUSE_LIST.md  HARVEST_BACKLOG.md  INTEGRATION_DECISION_LOG.md  MANIFEST.md  MASTER_BEHAVIOR_PROFILE.md  MASTER_IDENTITY.md  MASTER_LANGUAGE_PROFILE.md  MASTER_PROJECT_INDEX.md  MASTER_WORKFLOW_PROFILE.md  MIGRATION_POLICY.md  MONDAY_PILOT_CHECKLIST.md  PRODUCT_NORTH_STAR.md  PROJECT_HANDOVER.md  README.md  REPO_INHERITANCE_MAP.md  ROADMAP.md  RUN_AIOS_CASE_COCKPIT.bat  RUN_AIOS_HABIT_STUDIO.bat  RUN_AIOS_WORKSPACE_CHAT.bat  WORKLENS_ARCHITECTURE.md  WORKLENS_MASTER_ROADMAP.md  pyproject.toml
.ai/: AIOS_12Q_ANSWERS_REDACTED_FULL.txt  AIOS_12Q_FINAL_OWNER_ANSWERS_REDACTED_FULL.txt  AIOS_12Q_ROUTER_SYNTH_ANSWERS_REDACTED_FULL.txt  AIOS_FINAL_ANSWER_4Q_RERUN_REPORT.md  AIOS_GENERAL_RAG_OVERFIT_AUDIT.md  AIOS_GENERAL_RAG_RESET_DECISION.md  AIOS_GENERIC_RAG_CORE_ARCHITECTURE.md  AIOS_NOTEBOOKLM_12Q_ROUTER_SYNTH_SIDE_BY_SIDE_REVIEW.md  AIOS_RAG_FAILURE_ANALYSIS.md  AIOS_ROUTER_SYNTHESIZER_4Q_RERUN_REPORT.md  AIOS_ROUTER_SYNTHESIZER_PATCH_AUDIT_REPORT.md  AIOS_ROUTER_SYNTH_12Q_FAILED_RERUN_AUDIT.md  AIOS_SOURCE_ROUTER_AND_SYNTHESIZER_DESIGN.md  AUDIT_REPORT.md  BRIDGE_MANUAL_STEP_REDUCTION_AUDIT_REPORT.md  BRIDGE_MANUAL_STEP_REDUCTION_REPORT.md  COMMERCIAL_OWNER_UI_REDESIGN_REPORT.md  DECISION_LOG.md  EXECUTION_REPORT.md  EXTRACTION_CURRENT_STATE.md  EXTRACTION_LIBRARY_MATRIX.md  EXTRACTION_UPGRADE_REPORT.md  FAIR_COMPARE_AFTER_EXCEL_EXTRACTION.md  FAIR_COMPARE_AFTER_EXCEL_EXTRACTION_FINAL.md  FIX_AIOS_GAPS_FROM_COMPARE_AUDIT_REPORT.md  FIX_AIOS_GAPS_FROM_NOTEBOOKLM_COMPARE_DESIGN.md  FULL_BUNDLE_ANTIGRAVITY_ROUNDTRIP_REPORT.md  FULL_BUNDLE_IDE_HANDOFF_DESIGN.md  FULL_BUNDLE_IDE_HANDOFF_REPORT.md  (+62 more)
(+346 files in other folders)
